--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ h1 {
     color: #ffffff;
     display: block;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
   }
   
   .landing-buttons button:hover {
@@ -451,10 +451,10 @@ h1 {
     color: transparent;
     user-select: none;
     text-align: center;
-    width: 60vw;
+    width: 90vw;
     /* width: 100%; */
     top: 30%;
-    font-size: 10vw;
+    font-size: 14vw;
     font-family: 'Frozen';
     transition: transform 0.1s ease, opacity 0.1s ease;
 
